[Frontend] Fixed bug where a small enough window would make the status information in officer cards in officerist.jsx to overflow the div

--- a/frontend/src/App/components/OfficerList/officerlist.module.css
+++ b/frontend/src/App/components/OfficerList/officerlist.module.css
@@ -101,6 +101,7 @@
 
 .officerListCardStatus {
     height: fit-content;
+    min-width: fit-content;
     margin-top: 16px;
     margin-left: auto;
     margin-right: 15px;
